--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -30,12 +30,22 @@
         android:layout_marginTop="23dp"
         android:id="@+id/nameInput" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_marginTop="40dp"
+        android:text="@string/user_info"
+        android:layout_below="@+id/acceptButton"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
+
     <Button
         android:text="@android:string/ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="31dp"
+        android:id="@+id/acceptButton"
         android:layout_below="@+id/nameInput"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp"
-        android:id="@+id/acceptButton" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
