dodanie checkbox zapamiętaj mnie, logika zapamiętania danych, możliwość ustawienia interwału czasowego, przekazywanie ostatecznych parametrów

--- a/app/src/main/res/layout/activity_application_selection.xml
+++ b/app/src/main/res/layout/activity_application_selection.xml
@@ -56,4 +56,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="102dp" />
 
+    <TextView
+        android:text="@string/selection_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:layout_marginTop="33dp"
+        android:textAlignment="viewStart"
+        android:layout_below="@+id/selectionGroup"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
